Añadidos metodos controlador vuelos entrantes
